# adsbee

./: .gitignore  .gitmodules  MQTT_INTEGRATION.md  README.md
affinity/promotional_materials/: generate_qr.py  pyproject.toml  qr_page.afdesign
firmware/adsbee_1090/esp/main/: CMakeLists.txt  app_main.cpp  bsp.hh  idf_component.yml  settings.cpp  task_priorities.hh
firmware/common/: CMakeLists.txt  data_structures.hh  settings.hh  settings_strs.cpp  spi_coprocessor.cc  spi_coprocessor.cpp  spi_coprocessor.hh
firmware/common/adsb/: CMakeLists.txt  adsb_packet.cc  adsb_packet.hh  adsb_types.hh  aircraft_dictionary.cc  aircraft_dictionary.cpp  aircraft_dictionary.hh  aircraft_dictionary_config.hh  decode_utils.cpp  decode_utils.hh  mode_s_ook_tx.cpp  mode_s_ook_tx.hh  mode_s_packet.cpp  mode_s_packet.hh  mode_s_packet_decoder.cc  mode_s_packet_decoder.hh  packet_decoder.cc  packet_decoder.hh  remote_id_packet.hh  transponder_packet.cc  transponder_packet.cpp  transponder_packet.hh  uat_packet.cpp  uat_packet.hh
firmware/common/adsb/nasa_cpr/: CMakeLists.txt  README.md  awb_utils.h  nasa_cpr.hh  nasa_cpr_airborne.cpp  nasa_cpr_surface.cpp
firmware/common/comms/: CMakeLists.txt  comms_reporting.cpp  comms_reporting.hh
firmware/common/comms/aircraftjson/: aircraftjson_utils.hh
firmware/common/comms/beast/: beast_tables.hh  beast_utils.cpp  beast_utils.hh  generate_beast_tables.py
firmware/common/comms/csbee/: CMakeLists.txt  csbee_utils.hh
firmware/common/comms/gdl90/: gdl90_utils.cpp  gdl90_utils.hh
firmware/common/comms/json/: json_utils.hh
firmware/common/comms/mavlink/: README.md  common.h  mavlink_helpers.h  mavlink_msg_adsb_vehicle.h  mavlink_msg_heartbeat.h  mavlink_msg_request_data_stream.h  mavlink_types.h  mavlink_utils.cpp  protocol.h  (+1 more)
firmware/common/coprocessor/: CMakeLists.txt  composite_array.cpp  composite_array.hh  object_dictionary.cpp  object_dictionary.hh  spi_coprocessor.cpp  spi_coprocessor.hh  spi_coprocessor_interface.hh  spi_coprocessor_packet.hh
firmware/common/firmware_update/: CMakeLists.txt  firmware_update.cc  firmware_update.hh  flash_utils.cc  flash_utils.hh
firmware/common/mqtt/: mqtt_messages.proto
firmware/common/settings/: CMakeLists.txt  settings.cpp  settings.hh  settings_migration.cpp  settings_migration.hh  settings_strs.cpp  settings_versions.hh
firmware/common/utils/: CMakeLists.txt  boot_utils.hh  buffer_utils.cc  buffer_utils.cpp  buffer_utils.hh  cpu_utils.cpp  cpu_utils.hh  data_structures.cpp  data_structures.hh  free_pool_allocator.hh  hal.hh  hash_map.hh  macros.hh  pfb_mutex.hh  task_utils.hh  ti_hal_time.cpp  unit_conversions.hh
firmware/esp/main/: CMakeLists.txt  adsbee_server.cpp  adsbee_server.hh  app_main.cpp  bsp.hh  comms.cpp  comms.hh  comms_ethernet.cpp  comms_ip.cpp  comms_wifi.cpp  device_info.hh  errno_strs.hh  hal.cpp  ip_utils.hh  settings.cpp  task_priorities.hh  websocket_server.cpp  websocket_server.hh
firmware/firmware/src/: CMakeLists.txt  main.cc  main.cpp  main.hh
firmware/pico/: .gitignore  CMakeLists.txt  README.md  SetUpConfigurations.cmake  ads_bee_firmware.code-workspace  core  pico.code-workspace
firmware/pico/application/: CMakeLists.txt  ads_bee.cc  ads_bee.hh  adsbee.cc  adsbee.hh  bsp.hh  core1.hh  eeprom.hh  flash_utils.cc  flash_utils.hh  main.cc  main.hh  settings.cc
firmware/pico/bootloader/: CMakeLists.txt  main.cc
firmware/pico/common/: CMakeLists.txt  eeprom.hh
firmware/pico/host_build/: host_test
firmware/pico/host_test/: CMakeLists.txt  README.md  comms.hh  hal.cc  main.cc  main.hh  settings.cc  test_ads_b_packet.cc  test_aircraft_dictionary.cc  test_aircraft_dictionary_mode_s.cc  test_buffer_utils.cc  test_composite_array.cc  test_data_structures.cc  test_decode_utils.cc  test_fixedmath.cc  test_geo_utils.cc  test_hash_map.cc  test_mode_a_c_packets.cc  test_mode_s_packet_decoder.cc  test_mqtt_protocol.cc  test_nasa_cpr.cc  test_packet_decoder.cc  test_platform.cc  test_reporting_beast.cc  test_reporting_csbee.cc  test_reporting_gdl90.cc  test_reporting_raw.cc  test_settings.cc  test_spi_coprocessor.cc  test_squitter_packets.cc  test_transponder_packet.cc
firmware/pico/linker_scripts/: app0.ld  app1.ld  append_crc32.py  application.ld  bootloader.ld  combined.ld  mkasm.py  test_crc.py  test_uf2_tools.py  uf2_tools.py  util_asm.py  util_crc.py  util_test.py  util_uf2.py
firmware/pico/pio/: blink.pio  capture.correlate.pio  capture.match.pio  capture.pio
firmware/pico/simulation/: wokwi.toml
firmware/pico/src/: CMakeLists.txt  main.cc
firmware/pico_firmware/src/: CMakeLists.txt  main.cc  main.hh
firmware/scripts/adsbee_monitor/: README.md  adsbee_monitor.py  pyproject.toml
firmware/scripts/adsbee_util/: adsbee.py  adsbee_util.py  pyproject.toml  test.py
firmware/scripts/dsp-codegen/: pyproject.toml
firmware/scripts/mavlink_decoder/: README.md  mavlink_decoder.py  pyproject.toml
firmware/scripts/mode_s_decoder/: decode_cpr_position.py  mode_s_decoder.py  pyproject.toml  try_bit_flips.py
firmware/scripts/mtl_calibrator/: mtl_calibrator.py  pyproject.toml
firmware/scripts/serial_logger/: README.md  pyproject.toml  serial_logger.py
firmware/scripts/terrain_tiler/: .gitignore  HANDOFF.md  README.md  THEORY_OF_OPERATION.md  pyproject.toml
firmware/test/: CMakeLists.txt  README.md
firmware/test/inc/: CMakeLists.txt  hal.hh  hal_god_powers.hh
firmware/test/src/: CMakeLists.txt  comms.hh  hal.cc  hal_god_powers.hh  main.cc  test_ads_b_decoder.cpp  test_ads_b_packet.cc  test_ads_b_packet.cpp  test_ads_bee.cc  test_aircraft_dictionary.cc  test_aircraft_dictionary.cpp  test_at_command_parser.cc  test_data_structures.cc  test_scbs_comms.cpp
firmware/ti/sub_ghz_radio/: CMakeLists.txt  NoRTOS.cpp  RFQueue.cpp  bsp.hh  cc13x2_cc26x2_nortos.lds  main.cc  main.cpp  rfPacketRx.c  rfPacketRx.cpp  settings.cpp  spi_peripheral.cpp  syscalls_stub.c  ti_drivers_config.h
software/adsbee/: .gitignore  pyproject.toml
software/adsbee/adsbee/: adsbee_ota.py  at.py
software/ultrafeeder/mlat_debug/: data.txt  pyproject.toml  timestamp_plotter.py
(+1136 files in other folders)
