[tool.poetry]
name = "promotional-materials"
version = "0.1.0"
description = ""
authors = ["John McNelly <jkailimcnelly@gmail.com>"]
readme = "README.md"
packages = [{include = "promotional_materials"}]

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.4.2"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
